--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/css/select2.min.css" rel="stylesheet" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/js/select2.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
 <script src="js/google-fonts.js"></script>
 
 </html>
