--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <script src="js/dom-to-image.min.js"></script>
-<script src="js/thumbnail.js" type="module"></script>
+<script src="js/thumbnail.js"></script>
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/css/select2.min.css" rel="stylesheet" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/js/select2.min.js"></script>
