--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <!-- Custom NES css -->
     <link rel="stylesheet" href="css/custom_nes.css">
+
+    <script type="text/javascript" src="json/characters.json"></script>
 </head>
 
 <body>
@@ -178,179 +180,11 @@
         <div class="center margin-auto">
             <button class="nes-btn is-primary icons-only" type="button" id="reverse-j1"><i class="material-icons">compare_arrows</i></button>
         </div>
-        <div class="panel-color select-char" id="char1">
-            <!-- first line-->
-            <img class="stocks j1" id="mario" src="img/char/mario/stock_mario_00.png">
-            <img class="stocks j1" id="donkey" src="img/char/donkey/stock_donkey_00.png">
-            <img class="stocks j1 selected" id="link" src="img/char/link/stock_link_00.png">
-            <img class="stocks j1" id="samus" src="img/char/samus/stock_samus_00.png">
-            <img class="stocks j1" id="samusd" src="img/char/samusd/stock_samusd_00.png">
-            <img class="stocks j1" id="yoshi" src="img/char/yoshi/stock_yoshi_00.png">
-            <img class="stocks j1" id="kirby" src="img/char/kirby/stock_kirby_00.png">
-            <img class="stocks j1" id="fox" src="img/char/fox/stock_fox_00.png">
-            <img class="stocks j1" id="pikachu" src="img/char/pikachu/stock_pikachu_00.png">
-            <img class="stocks j1" id="luigi" src="img/char/luigi/stock_luigi_00.png">
-            <img class="stocks j1" id="ness" src="img/char/ness/stock_ness_00.png">
-            <img class="stocks j1" id="captain" src="img/char/captain/stock_captain_00.png">
-            <img class="stocks j1" id="purin" src="img/char/purin/stock_purin_00.png">
-            <!-- second line-->
-            <img class="stocks j1" id="peach" src="img/char/peach/stock_peach_00.png">
-            <img class="stocks j1" id="daisy" src="img/char/daisy/stock_daisy_00.png">
-            <img class="stocks j1" id="koopa" src="img/char/koopa/stock_koopa_00.png">
-            <img class="stocks j1" id="ice" src="img/char/ice/stock_ice_00.png">
-            <img class="stocks j1" id="sheik" src="img/char/sheik/stock_sheik_00.png">
-            <img class="stocks j1" id="zelda" src="img/char/zelda/stock_zelda_00.png">
-            <img class="stocks j1" id="mariod" src="img/char/mariod/stock_mariod_00.png">
-            <img class="stocks j1" id="pichu" src="img/char/pichu/stock_pichu_00.png">
-            <img class="stocks j1" id="falco" src="img/char/falco/stock_falco_00.png">
-            <img class="stocks j1" id="marth" src="img/char/marth/stock_marth_00.png">
-            <img class="stocks j1" id="lucina" src="img/char/lucina/stock_lucina_00.png">
-            <img class="stocks j1" id="younglink" src="img/char/younglink/stock_younglink_00.png">
-            <img class="stocks j1" id="ganon" src="img/char/ganon/stock_ganon_00.png">
-            <!-- third line-->
-            <img class="stocks j1" id="mewtwo" src="img/char/mewtwo/stock_mewtwo_00.png">
-            <img class="stocks j1" id="roy" src="img/char/roy/stock_roy_00.png">
-            <img class="stocks j1" id="chrom" src="img/char/chrom/stock_chrom_00.png">
-            <img class="stocks j1" id="gamewatch" src="img/char/gamewatch/stock_gamewatch_00.png">
-            <img class="stocks j1" id="metaknight" src="img/char/metaknight/stock_metaknight_00.png">
-            <img class="stocks j1" id="pit" src="img/char/pit/stock_pit_00.png">
-            <img class="stocks j1" id="pitb" src="img/char/pitb/stock_pitb_00.png">
-            <img class="stocks j1" id="szerosuit" src="img/char/szerosuit/stock_szerosuit_00.png">
-            <img class="stocks j1" id="wario" src="img/char/wario/stock_wario_00.png">
-            <img class="stocks j1" id="snake" src="img/char/snake/stock_snake_00.png">
-            <img class="stocks j1" id="ike" src="img/char/ike/stock_ike_00.png">
-            <img class="stocks j1" id="ptrainer" src="img/char/ptrainer/stock_ptrainer_01.png">
-            <img class="stocks j1" id="diddy" src="img/char/diddy/stock_diddy_00.png">
-            <!-- fourth line-->
-            <img class="stocks j1" id="lucas" src="img/char/lucas/stock_lucas_00.png">
-            <img class="stocks j1" id="sonic" src="img/char/sonic/stock_sonic_00.png">
-            <img class="stocks j1" id="dedede" src="img/char/dedede/stock_dedede_00.png">
-            <img class="stocks j1" id="pikmin" src="img/char/pikmin/stock_pikmin_00.png">
-            <img class="stocks j1" id="lucario" src="img/char/lucario/stock_lucario_00.png">
-            <img class="stocks j1" id="robot" src="img/char/robot/stock_robot_00.png">
-            <img class="stocks j1" id="toonlink" src="img/char/toonlink/stock_toonlink_00.png">
-            <img class="stocks j1" id="wolf" src="img/char/wolf/stock_wolf_00.png">
-            <img class="stocks j1" id="murabito" src="img/char/murabito/stock_murabito_00.png">
-            <img class="stocks j1" id="rockman" src="img/char/rockman/stock_rockman_00.png">
-            <img class="stocks j1" id="wiifit" src="img/char/wiifit/stock_wiifit_00.png">
-            <img class="stocks j1" id="rosetta" src="img/char/rosetta/stock_rosetta_00.png">
-            <img class="stocks j1" id="littlemac" src="img/char/littlemac/stock_littlemac_00.png">
-            <!-- fifth line-->
-            <img class="stocks j1" id="gekkouga" src="img/char/gekkouga/stock_gekkouga_00.png">
-            <img class="stocks j1" id="palutena" src="img/char/palutena/stock_palutena_00.png">
-            <img class="stocks j1" id="pacman" src="img/char/pacman/stock_pacman_00.png">
-            <img class="stocks j1" id="reflet" src="img/char/reflet/stock_reflet_00.png">
-            <img class="stocks j1" id="shulk" src="img/char/shulk/stock_shulk_00.png">
-            <img class="stocks j1" id="koopajr" src="img/char/koopajr/stock_koopajr_00.png">
-            <img class="stocks j1" id="duckhunt" src="img/char/duckhunt/stock_duckhunt_00.png">
-            <img class="stocks j1" id="ryu" src="img/char/ryu/stock_ryu_00.png">
-            <img class="stocks j1" id="ken" src="img/char/ken/stock_ken_00.png">
-            <img class="stocks j1" id="cloud" src="img/char/cloud/stock_cloud_00.png">
-            <img class="stocks j1" id="kamui" src="img/char/kamui/stock_kamui_00.png">
-            <img class="stocks j1" id="bayonetta" src="img/char/bayonetta/stock_bayonetta_00.png">
-            <img class="stocks j1" id="inkling" src="img/char/inkling/stock_inkling_00.png">
-            <!-- last line -->
-            <div class="reserved"></div>
-            <img class="stocks j1" id="ridley" src="img/char/ridley/stock_ridley_00.png">
-            <img class="stocks j1" id="simon" src="img/char/simon/stock_simon_00.png">
-            <img class="stocks j1" id="richter" src="img/char/richter/stock_richter_00.png">
-            <img class="stocks j1" id="krool" src="img/char/krool/stock_krool_00.png">
-            <img class="stocks j1" id="shizue" src="img/char/shizue/stock_shizue_00.png">
-            <img class="stocks j1" id="gaogaen" src="img/char/gaogaen/stock_gaogaen_00.png">
-            <img class="stocks j1" id="packun" src="img/char/packun/stock_packun_00.png">
-            <img class="stocks j1" id="jack" src="img/char/jack/stock_jack_00.png">
-            <img class="stocks j1" id="miifighter" src="img/char/mii/stock_miifighter.png">
-            <img class="stocks j1" id="miiswordsman" src="img/char/mii/stock_miiswordsman.png">
-            <img class="stocks j1" id="miigunner" src="img/char/mii/stock_miigunner.png">
-        </div>
+        <div class="panel-color select-char" id="stocks-j1"></div>
         <div class="center margin-auto">
             <button class="nes-btn is-primary icons-only" type="button" id="reverse-j2"><i class="material-icons">compare_arrows</i></button>
         </div>
-        <div class="panel-color select-char" id="char2">
-            <!-- first line-->
-            <img class="stocks j2" id="mario" src="img/char/mario/stock_mario_00.png">
-            <img class="stocks j2" id="donkey" src="img/char/donkey/stock_donkey_00.png">
-            <img class="stocks j2" id="link" src="img/char/link/stock_link_00.png">
-            <img class="stocks j2" id="samus" src="img/char/samus/stock_samus_00.png">
-            <img class="stocks j2" id="samusd" src="img/char/samusd/stock_samusd_00.png">
-            <img class="stocks j2" id="yoshi" src="img/char/yoshi/stock_yoshi_00.png">
-            <img class="stocks j2" id="kirby" src="img/char/kirby/stock_kirby_00.png">
-            <img class="stocks j2" id="fox" src="img/char/fox/stock_fox_00.png">
-            <img class="stocks j2" id="pikachu" src="img/char/pikachu/stock_pikachu_00.png">
-            <img class="stocks j2" id="luigi" src="img/char/luigi/stock_luigi_00.png">
-            <img class="stocks j2" id="ness" src="img/char/ness/stock_ness_00.png">
-            <img class="stocks j2" id="captain" src="img/char/captain/stock_captain_00.png">
-            <img class="stocks j2" id="purin" src="img/char/purin/stock_purin_00.png">
-            <!-- second line-->
-            <img class="stocks j2" id="peach" src="img/char/peach/stock_peach_00.png">
-            <img class="stocks j2" id="daisy" src="img/char/daisy/stock_daisy_00.png">
-            <img class="stocks j2" id="koopa" src="img/char/koopa/stock_koopa_00.png">
-            <img class="stocks j2" id="ice" src="img/char/ice/stock_ice_00.png">
-            <img class="stocks j2" id="sheik" src="img/char/sheik/stock_sheik_00.png">
-            <img class="stocks j2" id="zelda" src="img/char/zelda/stock_zelda_00.png">
-            <img class="stocks j2" id="mariod" src="img/char/mariod/stock_mariod_00.png">
-            <img class="stocks j2" id="pichu" src="img/char/pichu/stock_pichu_00.png">
-            <img class="stocks j2" id="falco" src="img/char/falco/stock_falco_00.png">
-            <img class="stocks j2" id="marth" src="img/char/marth/stock_marth_00.png">
-            <img class="stocks j2" id="lucina" src="img/char/lucina/stock_lucina_00.png">
-            <img class="stocks j2" id="younglink" src="img/char/younglink/stock_younglink_00.png">
-            <img class="stocks j2 selected" id="ganon" src="img/char/ganon/stock_ganon_00.png">
-            <!-- third line-->
-            <img class="stocks j2" id="mewtwo" src="img/char/mewtwo/stock_mewtwo_00.png">
-            <img class="stocks j2" id="roy" src="img/char/roy/stock_roy_00.png">
-            <img class="stocks j2" id="chrom" src="img/char/chrom/stock_chrom_00.png">
-            <img class="stocks j2" id="gamewatch" src="img/char/gamewatch/stock_gamewatch_00.png">
-            <img class="stocks j2" id="metaknight" src="img/char/metaknight/stock_metaknight_00.png">
-            <img class="stocks j2" id="pit" src="img/char/pit/stock_pit_00.png">
-            <img class="stocks j2" id="pitb" src="img/char/pitb/stock_pitb_00.png">
-            <img class="stocks j2" id="szerosuit" src="img/char/szerosuit/stock_szerosuit_00.png">
-            <img class="stocks j2" id="wario" src="img/char/wario/stock_wario_00.png">
-            <img class="stocks j2" id="snake" src="img/char/snake/stock_snake_00.png">
-            <img class="stocks j2" id="ike" src="img/char/ike/stock_ike_00.png">
-            <img class="stocks j2" id="ptrainer" src="img/char/ptrainer/stock_ptrainer_01.png">
-            <img class="stocks j2" id="diddy" src="img/char/diddy/stock_diddy_00.png">
-            <!-- fourth line-->
-            <img class="stocks j2" id="lucas" src="img/char/lucas/stock_lucas_00.png">
-            <img class="stocks j2" id="sonic" src="img/char/sonic/stock_sonic_00.png">
-            <img class="stocks j2" id="dedede" src="img/char/dedede/stock_dedede_00.png">
-            <img class="stocks j2" id="pikmin" src="img/char/pikmin/stock_pikmin_00.png">
-            <img class="stocks j2" id="lucario" src="img/char/lucario/stock_lucario_00.png">
-            <img class="stocks j2" id="robot" src="img/char/robot/stock_robot_00.png">
-            <img class="stocks j2" id="toonlink" src="img/char/toonlink/stock_toonlink_00.png">
-            <img class="stocks j2" id="wolf" src="img/char/wolf/stock_wolf_00.png">
-            <img class="stocks j2" id="murabito" src="img/char/murabito/stock_murabito_00.png">
-            <img class="stocks j2" id="rockman" src="img/char/rockman/stock_rockman_00.png">
-            <img class="stocks j2" id="wiifit" src="img/char/wiifit/stock_wiifit_00.png">
-            <img class="stocks j2" id="rosetta" src="img/char/rosetta/stock_rosetta_00.png">
-            <img class="stocks j2" id="littlemac" src="img/char/littlemac/stock_littlemac_00.png">
-            <!-- fifth line-->
-            <img class="stocks j2" id="gekkouga" src="img/char/gekkouga/stock_gekkouga_00.png">
-            <img class="stocks j2" id="palutena" src="img/char/palutena/stock_palutena_00.png">
-            <img class="stocks j2" id="pacman" src="img/char/pacman/stock_pacman_00.png">
-            <img class="stocks j2" id="reflet" src="img/char/reflet/stock_reflet_00.png">
-            <img class="stocks j2" id="shulk" src="img/char/shulk/stock_shulk_00.png">
-            <img class="stocks j2" id="koopajr" src="img/char/koopajr/stock_koopajr_00.png">
-            <img class="stocks j2" id="duckhunt" src="img/char/duckhunt/stock_duckhunt_00.png">
-            <img class="stocks j2" id="ryu" src="img/char/ryu/stock_ryu_00.png">
-            <img class="stocks j2" id="ken" src="img/char/ken/stock_ken_00.png">
-            <img class="stocks j2" id="cloud" src="img/char/cloud/stock_cloud_00.png">
-            <img class="stocks j2" id="kamui" src="img/char/kamui/stock_kamui_00.png">
-            <img class="stocks j2" id="bayonetta" src="img/char/bayonetta/stock_bayonetta_00.png">
-            <img class="stocks j2" id="inkling" src="img/char/inkling/stock_inkling_00.png">
-            <!-- last line -->
-            <div class="reserved"></div>
-            <img class="stocks j2" id="ridley" src="img/char/ridley/stock_ridley_00.png">
-            <img class="stocks j2" id="simon" src="img/char/simon/stock_simon_00.png">
-            <img class="stocks j2" id="richter" src="img/char/richter/stock_richter_00.png">
-            <img class="stocks j2" id="krool" src="img/char/krool/stock_krool_00.png">
-            <img class="stocks j2" id="shizue" src="img/char/shizue/stock_shizue_00.png">
-            <img class="stocks j2" id="gaogaen" src="img/char/gaogaen/stock_gaogaen_00.png">
-            <img class="stocks j2" id="packun" src="img/char/packun/stock_packun_00.png">
-            <img class="stocks j2" id="jack" src="img/char/jack/stock_jack_00.png">
-            <img class="stocks j2" id="miifighter" src="img/char/mii/stock_miifighter.png">
-            <img class="stocks j2" id="miiswordsman" src="img/char/mii/stock_miiswordsman.png">
-            <img class="stocks j2" id="miigunner" src="img/char/mii/stock_miigunner.png">
-        </div>
+        <div class="panel-color select-char" id="stocks-j2"></div>
         <span class="center margin-auto nes-text">Costume</span>
         <div class="panel-color select-color" id="color-char1">
             <img class="color-stocks j1" data-char="link" id="j1-00" src="img/char/link/stock_link_00.png">
