--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <form method="dialog">
             <p>Personnage Joueur 1 : </p>
             <div class="center margin-auto">
-                <button class="nes-btn is-primary icons-only" type="button" id="reverse-j1"><i class="material-icons">compare_arrows</i></button>
+                <button class="nes-btn is-primary icons-only" type="button" id="reverse-j1"><i class="material-icons">compare_arrows</i> Retourner</button>
             </div>
             <div class="panel-color select-char" id="stocks-j1"></div>
             <span class="center margin-auto nes-text">Costume</span>
@@ -82,7 +82,7 @@
         <form method="dialog">
             <p>Personnage Joueur 2 : </p>
             <div class="center margin-auto">
-                <button class="nes-btn is-primary icons-only" type="button" id="reverse-j2"><i class="material-icons">compare_arrows</i></button>
+                <button class="nes-btn is-primary icons-only" type="button" id="reverse-j2"><i class="material-icons">compare_arrows</i> Retourner</button>
             </div>
             <div class="panel-color select-char" id="stocks-j2"></div>
             <span class="center margin-auto nes-text">Costume</span>
